--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Homer's Odyssey</p>
                 </div>
                 <div class="card">
-                    <div class="content-img4"> <a href="resources/homer_the_iliad.pdf"> <IMG src="images/ILIAD.jpgs"> </a> </div>
+                    <div class="content-img4"> <a href="resources/homer_the_iliad.pdf"> <IMG src="images/ILIAD.jpg"> </a> </div>
                     
                     <p>Homer's Iliad </p>
                 </div>
