--- a/books/books.html
+++ b/books/books.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="content" >
 						
-						<h3 id="homer">Homer</h3>
+						<h3 id="homer">Iliad</h3>
 						<p> The Iliad is one of two major ancient Greek epic poems attributed to Homer.
 						</p>
 						<a href="../resources/homer_the_iliad.pdf">Download</a>
