--- a/books/books.html
+++ b/books/books.html
@@ -45,7 +45,7 @@
 				<div class="card">
 					<div class="imgbox">
 						
-						<i class="fab fa-homer"> <img src="../images/ILIAD.jpg"> </i>
+						<i class="fab fa-homer"> <img src="../images/iliad.jpg"> </i>
 					</div>
 					<div class="content" >
 						
